fix alignment of muted heading icons

--- a/static/sass/_pattern_heading-icon.scss
+++ b/static/sass/_pattern_heading-icon.scss
@@ -17,6 +17,8 @@
   .p-heading-icon__img--small {
     align-self: center;
     height: auto;
+    margin-bottom: 0;
+    margin-top: .25rem;
     max-width: 2rem;
   }
 }
